# bevy_serial

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: test_suite.yml
examples/: configuration.rs  simple.rs
src/: lib.rs
